add basic layout and styling

--- a/index.html
+++ b/index.html
@@ -9,6 +9,13 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <div id="container">
+        <div id="buttons">
+
+        </div>
+        <div id="art">
+            
+        </div>
+    </div>
 </body>
 </html>
