add grid generation functionality

--- a/index.html
+++ b/index.html
@@ -9,13 +9,8 @@
     <title>Document</title>
 </head>
 <body>
-    <div id="container">
-        <div id="buttons">
+    <div class="grid-container">
 
-        </div>
-        <div id="art">
-            
-        </div>
     </div>
 </body>
 </html>
