--- a/index.html
+++ b/index.html
@@ -9,6 +9,6 @@
     <title>Document</title>
 </head>
 <body>
-    <div class="grid-container"></div>
+    <div id="container"></div>
 </body>
 </html>
