finish adding generation functionality

--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
     <title>Document</title>
 </head>
 <body>
-    <div id="container"></div>
+    <div class="flex">
+        <button id="prompt">Generate Grid</button>
+        <div id="container"></div>
+    </div>
 </body>
 </html>
